<resources>
    <string name="app_name">Calculator</string>
    <string name="nameOfButtonToNavigateSimpleOperation">Simple</string>
    <string name="nameOfButtonToNavigateAdvanceOperation">Advance</string>
    <string name="nameOfButtonToNavigateAbout">About</string>
    <string name="nameOfButtonToExitApplication">Exit</string>
    <string name="nameOfApplication">Calculator</string>
    <string name="authorName">Mikołaj Baran 209267</string>
    <string name="author">Autor:</string>
    <string name="descryption">Opis:</string>
    <string name="descrytptionText">Prosty kalkulator na platforme android</string>

    <string name="Bksp">Bksp</string>
    <string name="plusMinus">+/-</string>
    <string name="clear">C</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="divide">/</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="mul">*</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="min">-</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="persent">%</string>


</resources>
